--- a/test2.html
+++ b/test2.html
@@ -25,9 +25,17 @@
 <label for="theplace"Where is the problem?:<.label><br>
 <input type="text" id="theplace" name="theplace" value=""><br>
 <input type="submit">
+  
+  
+<table style="width100%">
+  <tr> 
+   <th>error<th>
+   <th>location<th> 
+   <th>severity<th>
+  </tr>
+          
 <!--Requests the slider to be moved which then defines the severity of the problem, 100 being the maximum severity (entire network is at risk) Where 0 is the lowest (minimum risk to anything)
 </form>
-
 
 
 
