--- a/test2.html
+++ b/test2.html
@@ -19,12 +19,12 @@
 <input type="text" id="theerror" name="theerror" value=""><br>
 <input type="submit">
 <!--This allows for the program to ask for the error using the input box, where the submit button submits it to the spreadsheet-->
-
-<p>Where are you experiencing this?<p>
-<form action="/action+page.php">
-<label for="theplace"Where is the problem?:<.label><br>
-<input type="text" id="theplace" name="theplace" value=""><br>
-<input type="submit">
+  <legend> Answer here please </legend>
+  <p>Where are you experiencing this?<p>
+  <form action="/action+page.php">
+  <label for="theplace"Where is the problem?:<.label><br>
+  <input type="text" id="theplace" name="theplace" value=""><br>
+  <input type="submit">
   
   
 <table style="width100%">
